# analitica_viviendas

./: .gitattributes  .gitignore  README.md  Vagrantfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml
analinis_vivendas/: .gitignore  pyproject.toml
analinis_vivendas/.github/workflows/: python-publish.yml
analinis_vivendas/src/modulo_analitics/: clean.py  extract.py  stats.py
analinis_vivendas/tests/: test_clean.py  test_extract.py  test_stats.py
dashboard/: app.py
data/sample/: sample_inmuebles.csv
docs/: ARQUITECTURA.md  PowerBI_Guia.md
docs/negocio/: Análisis Descriptivo.md  Lista de tareas pendientes.md  Metro Cuadrado.md  actividades macro
docs/notebooks/: metro_cuadrado.ipynb  v2_metro_cuadrado.ipynb
scripts/: crear_acceso_directo.ps1  run_dashboard.bat  run_dashboard.sh
src/modulo_analitics/: ai_agent.py  clean.py  config.py  drive.py  extract.py  fetch.py  pipeline.py
tests/: test_clean.py  test_extract.py
